# tensor-compiler

./: CMakeLists.txt
include/: mnist.h
python/: base.py
src/: frontend.cpp  main.cpp  metal_exec.cpp  mnist.cpp  python_binding.cpp
